--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Schlichte Notizen</string>
+    <string name="app_name">Simple Notes</string>
     <string name="app_launcher_name">Notizen</string>
     <string name="widget_config">Vielen dank, dass du Simple Notes benutzt.\nWeitere einfache Apps findest du auf SimpleMobileTools.com.\n</string>
     <string name="save">Speichern</string>
@@ -25,15 +25,15 @@
     <string name="settings">Einstellungen</string>
     <string name="dark_theme">Dunkles Thema</string>
     <string name="note_font_size">Schriftgröße</string>
-    <string name="widget_note">Note used in widget</string>
+    <string name="widget_note">Widget Notiz</string>
     <string name="small">Klein</string>
     <string name="normal">Normal</string>
     <string name="large">Groß</string>
     <string name="extra_large">Sehr groß</string>
-    <string name="gravity">Gravity</string>
-    <string name="left">Left</string>
-    <string name="center">Center</string>
-    <string name="right">Right</string>
+    <string name="gravity">Ausrichtung</string>
+    <string name="left">Linksbündig</string>
+    <string name="center">Zentriert</string>
+    <string name="right">Rechtsbündig</string>
 
     <!-- About -->
     <string name="about">Über</string>
@@ -56,7 +56,7 @@
     <string name="filepicker_title"><u>Simple File Picker (Dateiauswahldialog)</u></string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
-    <string name="app_short_description">A simple textfield for adding quick notes, without ads.</string>
+    <string name="app_short_description">Ein einfaches Textfeld für Notizen. Komplett ohne Werbung</string>
     <string name="app_long_description">
         Need to take a quick note of something to buy, an address, or a startup idea? Then this is the app you\'ve been looking for! No complicated setup steps needed, just type in what you came for. Comes with autosave, so you will not discard your changes by mistake. Supports creating multiple independent notes.
 
