move the icons in drawables folder + add Commons library

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -68,7 +68,7 @@
 
         Ne contient pas de publicités ou d\'autorisations inutiles. Complèetement opensource, fournit un thème sombre également.
 
-        Cette application est juste une pièce d\'une plus grande série d'applications. Vous pouvez trouver le reste de celles-ci à http://www.simplemobiletools.com
+        Cette application est juste une pièce d\'une plus grande série d\'applications. Vous pouvez trouver le reste de celles-ci à http://www.simplemobiletools.com
     </string>
 
     <!--
