--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -27,6 +27,7 @@
     <string name="right">右</string>
 
     <!-- Release notes -->
+    <string name="release_28">Allow picking colors by hex codes</string>
     <string name="release_25">
         Added more color customization options\n
         Your settings have been cleared, please reset them</string>
