--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="app_name">Simple Notes</string>
     <string name="app_launcher_name">Notes</string>
     <string name="widget_config">Merci d\'utiliser Simple Notes.\nPour plus d\'applications simples merci de visiter SimpleMobileTools.com.\n</string>
     <string name="cannot_share_empty_text">Impossible de partager un texte vide</string>
