--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="app_name">Simple Notes</string>
     <string name="app_launcher_name">Notes</string>
     <string name="widget_config">Grazie per avere scelto Simple Notes.\nPer altre semplici app visita SimpleMobileTools.com.\n</string>
     <string name="cannot_share_empty_text">Impossibile condividere un testo vuoto</string>
