--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -17,6 +17,7 @@
 
     <!-- Settings -->
     <string name="widget_note">Widget Notiz</string>
+    <string name="links_and_emails_clickable">Make links and emails clickable</string>
     <string name="note_font_size">Schriftgröße</string>
     <string name="small">Klein</string>
     <string name="normal">Normal</string>
