--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -17,6 +17,7 @@
 
     <!-- Settings -->
     <string name="note_font_size">Tamaño de fuente</string>
+    <string name="links_and_emails_clickable">Make links and emails clickable</string>
     <string name="widget_note">Nota del widget</string>
     <string name="small">Pequeña</string>
     <string name="normal">Normal</string>
