--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -17,6 +17,7 @@
 
     <!-- Settings -->
     <string name="widget_note">Note utilisée dans le widget</string>
+    <string name="links_and_emails_clickable">Make links and emails clickable</string>
     <string name="note_font_size">Taille de la police de la note</string>
     <string name="small">Petite</string>
     <string name="normal">Normale</string>
