--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -17,6 +17,7 @@
 
     <!-- Settings -->
     <string name="note_font_size">Tamanho do texto da nota</string>
+    <string name="links_and_emails_clickable">Make links and emails clickable</string>
     <string name="widget_note">Nota utilizada no widget</string>
     <string name="small">Pequeno</string>
     <string name="normal">Normal</string>
