--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -14,6 +14,8 @@
     <string name="pick_a_note">Choisir une note</string>
     <string name="rename_note">Renomme la note</string>
     <string name="general_note">Note générale</string>
+    <string name="open_file">Open file</string>
+    <string name="save_as_file">Save as file</string>
 
     <!-- Settings -->
     <string name="widget_note">Note utilisée dans le widget</string>
@@ -29,7 +31,11 @@
     <string name="right">Droite</string>
 
     <!-- Release notes -->
-    <string name="release_29">Added an option to make emails and links clickable</string>
+    <string name="release_29">
+        Added an option to make emails and links clickable\n
+        Allow importing text from files\n
+        Allow saving notes to files
+    </string>
     <string name="release_28">Allow picking colors by hex codes</string>
     <string name="release_25">
         Added more color customization options\n
