--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -16,6 +16,7 @@
     <string name="general_note">全般メモ</string>
     <string name="open_file">Open file</string>
     <string name="save_as_file">Save as file</string>
+    <string name="file_too_large">File too large, the limit is 10MB</string>
 
     <!-- Settings -->
     <string name="note_font_size">メモのフォントサイズ</string>
