--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -14,6 +14,8 @@
     <string name="pick_a_note">Notiz auswählen</string>
     <string name="rename_note">Notiz umbenennen</string>
     <string name="general_note">Hauptnotiz</string>
+
+    <!-- File notes -->
     <string name="open_file">Open file</string>
     <string name="save_as_file">Save as file</string>
     <string name="file_too_large">File too large, the limit is 10MB</string>
@@ -21,6 +23,8 @@
     <string name="update_file_at_note">Update the file itself at updating the note</string>
     <string name="delete_note_only">This will delete the note only.</string>
     <string name="delete_file_itself">Delete the file itself too</string>
+    <string name="note_saved_successfully">Note saved successfully</string>
+    <string name="display_success_message">Display success message after saving a note</string>
 
     <!-- Settings -->
     <string name="widget_note">Widget Notiz</string>
