--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -21,8 +21,7 @@
     <string name="file_too_large">File too large, the limit is 10MB</string>
     <string name="only_import_file_content">Only import the file content</string>
     <string name="update_file_at_note">Update the file itself at updating the note</string>
-    <string name="delete_note_only">This will delete the note only.</string>
-    <string name="delete_file_itself">Delete the file itself too</string>
+    <string name="delete_file_itself">Also delete file \"%1$s\"</string>
     <string name="note_saved_successfully">Note \"%1$s\" saved successfully</string>
     <string name="display_success_message">Display save success messages</string>
 
