--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -14,20 +14,20 @@
     <string name="pick_a_note">Selecione uma nota</string>
     <string name="rename_note">Renomear nota</string>
     <string name="general_note">Nota genérica</string>
-    <string name="open_file">Open file</string>
+    <string name="open_file">Abrir ficheiro</string>
 
     <!-- File notes -->
-    <string name="save_as_file">Save as file</string>
-    <string name="file_too_large">File too large, the limit is 10MB</string>
-    <string name="only_import_file_content">Only import the file content</string>
-    <string name="update_file_at_note">Update the file itself at updating the note</string>
-    <string name="delete_file_itself">Also delete file \"%1$s\"</string>
-    <string name="note_saved_successfully">Note \"%1$s\" saved successfully</string>
-    <string name="display_success_message">Display save success messages</string>
+    <string name="save_as_file">Guardar como ficheiro/string>
+    <string name="file_too_large">Ficheiro muito grande, o limite são 10 MB</string>
+    <string name="only_import_file_content">Importar apenas o conteúdo do ficheiro</string>
+    <string name="update_file_at_note">Atualizar o ficheiro ao atualizar a nota</string>
+    <string name="delete_file_itself">Apagar também o ficheiro \"%1$s\"</string>
+    <string name="note_saved_successfully">Nota \"%1$s\" guardada com sucesso</string>
+    <string name="display_success_message">Mostrar mensagens de gravação com sucesso</string>
 
     <!-- Settings -->
     <string name="note_font_size">Tamanho do texto da nota</string>
-    <string name="links_and_emails_clickable">Make links and emails clickable</string>
+    <string name="links_and_emails_clickable">Ativar clique em ligações e endereços de e-mail</string>
     <string name="widget_note">Nota utilizada no widget</string>
     <string name="small">Pequeno</string>
     <string name="normal">Normal</string>
