--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -17,7 +17,7 @@
     <string name="open_file">Open file</string>
 
     <!-- File notes -->
-    <string name="save_as_file">Save as file</string>
+    <string name="export_as_file">Export as file</string>
     <string name="file_too_large">File too large, the limit is 10MB</string>
     <string name="only_import_file_content">Only import the file content</string>
     <string name="update_file_at_note">Update the file itself at updating the note</string>
