--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -16,18 +16,18 @@
     <string name="general_note">Note générale</string>
 
     <!-- File notes -->
-    <string name="open_file">Open file</string>
-    <string name="export_as_file">Export as file</string>
-    <string name="file_too_large">File too large, the limit is 10MB</string>
-    <string name="only_import_file_content">Only import the file content</string>
-    <string name="update_file_at_note">Update the file itself at updating the note</string>
-    <string name="delete_file_itself">Also delete file \"%1$s\"</string>
-    <string name="note_saved_successfully">Note \"%1$s\" saved successfully</string>
-    <string name="display_success_message">Display save success messages</string>
+    <string name="open_file">Ouvrir le fichiere</string>
+    <string name="export_as_file">Exporter dans un fichier</string>
+    <string name="file_too_large">Taille du fichier trop importante, la limite est de 10MB</string>
+    <string name="only_import_file_content">Importer seulement le contenu du fichier</string>
+    <string name="update_file_at_note">Mettre à jour le fichier lui-même en mettant la note à jour</string>
+    <string name="delete_file_itself">Supprimer également le fichier \"%1$s\"</string>
+    <string name="note_saved_successfully">Note \"%1$s\" sauvegardée avec succès</string>
+    <string name="display_success_message">Afficher les messages de succès de sauvegarde</string>
 
     <!-- Settings -->
     <string name="widget_note">Note utilisée dans le widget</string>
-    <string name="links_and_emails_clickable">Make links and emails clickable</string>
+    <string name="links_and_emails_clickable">Rendre les liens et les emails cliquables</string>
     <string name="note_font_size">Taille de la police de la note</string>
     <string name="small">Petite</string>
     <string name="normal">Normale</string>
