--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -19,8 +19,8 @@
     <string name="open_file">Ouvrir le fichier</string>
     <string name="export_as_file">Exporter dans un fichier</string>
     <string name="file_too_large">Taille du fichier trop importante, la limite est de 10MB</string>
-    <string name="only_import_file_content">Importer seulement le contenu du fichier</string>
-    <string name="update_file_at_note">Mettre à jour le fichier lui-même en mettant la note à jour</string>
+    <string name="only_import_file_content">Only import the file content\n(changing the file will not affect the note)</string>
+    <string name="update_file_at_note">Update the file itself at updating the note\n(note gets deleted if file gets deleted, or path changes)</string>
     <string name="delete_file_itself">Supprimer également le fichier \"%1$s\"</string>
     <string name="note_saved_successfully">Note \"%1$s\" sauvegardée avec succès</string>
     <string name="display_success_message">Afficher les messages de succès de sauvegarde</string>
