--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -19,8 +19,8 @@
     <string name="open_file">Open file</string>
     <string name="export_as_file">Export as file</string>
     <string name="file_too_large">File too large, the limit is 10MB</string>
-    <string name="only_import_file_content">Only import the file content</string>
-    <string name="update_file_at_note">Update the file itself at updating the note</string>
+    <string name="only_import_file_content">Only import the file content\n(changing the file will not affect the note)</string>
+    <string name="update_file_at_note">Update the file itself at updating the note\n(note gets deleted if file gets deleted, or path changes)</string>
     <string name="delete_file_itself">Also delete file \"%1$s\"</string>
     <string name="note_saved_successfully">Note \"%1$s\" saved successfully</string>
     <string name="display_success_message">Display save success messages</string>
