--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -14,6 +14,8 @@
     <string name="pick_a_note">Pick a note</string>
     <string name="rename_note">Rename note</string>
     <string name="general_note">General note</string>
+    <string name="create_new_note">Create a new note</string>
+    <string name="add_to_note">Add to note</string>
 
     <!-- File notes -->
     <string name="open_file">Open file</string>
