--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -14,6 +14,8 @@
     <string name="pick_a_note">Выберите заметку</string>
     <string name="rename_note">Переименовать заметку</string>
     <string name="general_note">Общая заметка</string>
+    <string name="create_new_note">Новая заметка</string>
+    <string name="add_to_note">Добавить к заметке</string>
 
     <!-- File notes -->
     <string name="open_file">Открыть файл</string>
