--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -15,6 +15,8 @@
     <string name="rename_note">Rename note</string>
     <string name="general_note">General note</string>
     <string name="open_file">Open file</string>
+    <string name="create_new_note">Create a new note</string>
+    <string name="add_to_note">Add to note</string>
 
     <!-- File notes -->
     <string name="export_as_file">Export as file</string>
