--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -30,6 +30,7 @@
     <!-- Settings -->
     <string name="note_font_size">Tamaño de fuente</string>
     <string name="links_and_emails_clickable">Make links and emails clickable</string>
+    <string name="place_cursor_end">Place cursor to the end of note</string>
     <string name="widget_note">Nota del widget</string>
     <string name="small">Pequeña</string>
     <string name="normal">Normal</string>
