--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -30,6 +30,7 @@
     <!-- Settings -->
     <string name="widget_note">Widgetben használt jegyzet</string>
     <string name="links_and_emails_clickable">Hivatkozások és e-mail címek felismerése</string>
+    <string name="place_cursor_end">Place cursor to the end of note</string>
     <string name="note_font_size">Jegyzet betűméret</string>
     <string name="small">Kicsi</string>
     <string name="normal">Közepes</string>
