--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -30,6 +30,7 @@
     <!-- Settings -->
     <string name="note_font_size">メモのフォントサイズ</string>
     <string name="links_and_emails_clickable">Make links and emails clickable</string>
+    <string name="place_cursor_end">Place cursor to the end of note</string>
     <string name="widget_note">ウィジェットで使用するメモ</string>
     <string name="small">小</string>
     <string name="normal">通常</string>
