--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -30,6 +30,7 @@
     <!-- Settings -->
     <string name="note_font_size">Tamanho do texto da nota</string>
     <string name="links_and_emails_clickable">Ativar clique em ligações e endereços de e-mail</string>
+    <string name="place_cursor_end">Place cursor to the end of note</string>
     <string name="widget_note">Nota utilizada no widget</string>
     <string name="small">Pequeno</string>
     <string name="normal">Normal</string>
